--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.1.2",
     "vue": "^2.6.11",
     "vue-awesome": "^4.1.0",
     "vue-router": "^3.4.9",
